[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "croissant-tasks"
version = "0.1.0"
description = "A validator and toolkit for Croissant Tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "nltk>=3.9.4",
    "pillow>=12.2.0",
    "pycocotools>=2.0.11",
    "pyshacl",
    "rdflib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["testdata*"]

[tool.setuptools.package-data]
"*" = ["*.ttl"]
