[project]
name = "ml_croissant"
description = "MLCommons datasets format."
version = "0.0.1"
authors = [
  { name = "Joaquin Vanschoren" },
  { name = "Jos van der Velde" },
  { name = "Omar Benjelloun" },
  { name = "Peter Mattson" },
  { name = "Pieter Gijsbers" },
  { name = "Pierre Marcenac" },
  { name = "Pierre Ruyssen" },
  { name = "Prabhant Singh" },
]
dependencies = [
  "absl-py",
  "etils[epath]",
  "networkx",
  "pandas",
  "rdflib",
  "requests",
  "tqdm",
]
readme = "README.md"

[project.optional-dependencies]
dev = ["black", "pyflakes", "pylint", "pytest", "pytype"]

[tool.black]
line-length = 88

[tool.pytype]
inputs = ["."]
